# yty

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  domain.py  main.py  narration.py  postprocess.py  worker.py
app/backends/: wan22.py
docker/: Dockerfile.api  Dockerfile.worker
scripts/: bootstrap_wan.py  hardware_doctor.py
tests/: test_api.py  test_database.py  test_domain.py  test_narration.py  test_postprocess.py  test_storyboard_worker.py  test_wan_backend.py
web/: app.js  index.html  styles.css
