[project]
name = "openvideo-local"
version = "0.1.0"
description = "Self-hosted, no-paid-API cinematic video generation studio"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "pillow>=11,<12",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
]
worker = [
  "accelerate>=1.8,<2",
  "dashscope>=1.23,<2",
  "diffusers>=0.35,<1",
  "easydict>=1.13,<2",
  "ftfy>=6.3,<7",
  "huggingface-hub>=0.34,<1",
  "imageio[ffmpeg]>=2.37,<3",
  "imageio-ffmpeg>=0.6,<1",
  "numpy>=1.26,<2",
  "opencv-python-headless>=4.9,<5",
  "pillow>=11,<12",
  "safetensors>=0.5,<1",
  "sentencepiece>=0.2,<1",
  "tokenizers>=0.20.3,<0.22",
  "torch>=2.4,<3",
  "torchaudio>=2.4,<3",
  "torchvision>=0.19,<1",
  "tqdm>=4.67,<5",
  "transformers>=4.49,<=4.51.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
